--- a/Projects/my-expenses/package.json
+++ b/Projects/my-expenses/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-    "firebase": "^8.10.0",
+    "firebase": "^9.15.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.3",
     "typescript-plugin-css-modules": "^3.4.0",
