--- a/Projects/my-expenses/package.json
+++ b/Projects/my-expenses/package.json
@@ -14,7 +14,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
+    "react-google-button": "^0.7.2",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
