--- a/Projects/my-expenses/package.json
+++ b/Projects/my-expenses/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
     "typescript": "^4.9.3",
     "typescript-plugin-css-modules": "^3.4.0",
     "web-vitals": "^2.1.4"
