--- a/Alura/react-ts/aluroni/package.json
+++ b/Alura/react-ts/aluroni/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.3",
     "typescript-plugin-css-modules": "^3.4.0",
