--- a/Projects/point-system/api/package.json
+++ b/Projects/point-system/api/package.json
@@ -20,11 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/typeorm": "^9.0.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.12",
+    "@nestjs/config": "^2.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
