--- a/Projects/point-system/api/package.json
+++ b/Projects/point-system/api/package.json
@@ -17,18 +17,27 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm:cli": "typeorm -f src/config/database/data-source.ts",
+    "migration:create": "cd src/config/database/migrations && npx typeorm-ts-node-commonjs migration:create",
+    "migration:run": "typeorm-ts-node-commonjs -d ./src/config/database/data-source.ts migration:run",
+    "seed:run": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed -d ./src/config/database/data-source.ts",
+    "db:create": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js db:create -d ./src/config/database/data-source.ts && npm run seed:run",
+    "db:drop": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js db:drop -d ./src/config/database/data-source.ts && npm run db:create"
   },
   "dependencies": {
-    "@nestjs/typeorm": "^9.0.1",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.12",
-    "@nestjs/config": "^2.3.1"
+    "typeorm-extension": "^2.1.15"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
