--- a/Projects/point-system/front/package.json
+++ b/Projects/point-system/front/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.3",
+    "@types/loadable__component": "^5.13.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
