--- a/Projects/point-system/front/.eslintrc.json
+++ b/Projects/point-system/front/.eslintrc.json
@@ -13,6 +13,8 @@
   "plugins": ["react", "@typescript-eslint", "react-hooks"],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "warn",
+    "no-empty-function": "off",
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
