--- a/Projects/point-system/front/package.json
+++ b/Projects/point-system/front/package.json
@@ -12,10 +12,12 @@
     "@loadable/component": "^5.15.3",
     "@types/loadable__component": "^5.13.4",
     "axios": "^1.3.6",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
+    "rxjs": "^7.8.1",
     "sass": "^1.61.0"
   },
   "devDependencies": {
